[gd_scene load_steps=95 format=2]

[ext_resource path="res://logo_intro.gd" type="Script" id=1]
[ext_resource path="res://external/aseprite/logo_animation/double_swipe_with_signature_drawer_and_small_shine_000.png" type="Texture" id=2]
[ext_resource path="res://external/aseprite/logo_animation/double_swipe_with_signature_drawer_and_small_shine_001.png" type="Texture" id=3]
[ext_resource path="res://external/aseprite/logo_animation/double_swipe_with_signature_drawer_and_small_shine_002.png" type="Texture" id=4]
[ext_resource path="res://external/aseprite/logo_animation/double_swipe_with_signature_drawer_and_small_shine_003.png" type="Texture" id=5]
[ext_resource path="res://external/aseprite/logo_animation/double_swipe_with_signature_drawer_and_small_shine_004.png" type="Texture" id=6]
[ext_resource path="res://external/aseprite/logo_animation/double_swipe_with_signature_drawer_and_small_shine_005.png" type="Texture" id=7]
[ext_resource path="res://external/aseprite/logo_animation/double_swipe_with_signature_drawer_and_small_shine_006.png" type="Texture" id=8]
[ext_resource path="res://external/aseprite/logo_animation/double_swipe_with_signature_drawer_and_small_shine_007.png" type="Texture" id=9]
[ext_resource path="res://external/aseprite/logo_animation/double_swipe_with_signature_drawer_and_small_shine_008.png" type="Texture" id=10]
[ext_resource path="res://external/aseprite/logo_animation/double_swipe_with_signature_drawer_and_small_shine_009.png" type="Texture" id=11]
[ext_resource path="res://external/aseprite/logo_animation/double_swipe_with_signature_drawer_and_small_shine_010.png" type="Texture" id=12]
[ext_resource path="res://external/aseprite/logo_animation/double_swipe_with_signature_drawer_and_small_shine_011.png" type="Texture" id=13]
[ext_resource path="res://external/aseprite/logo_animation/double_swipe_with_signature_drawer_and_small_shine_012.png" type="Texture" id=14]
[ext_resource path="res://external/aseprite/logo_animation/double_swipe_with_signature_drawer_and_small_shine_013.png" type="Texture" id=15]
[ext_resource path="res://external/aseprite/logo_animation/double_swipe_with_signature_drawer_and_small_shine_014.png" type="Texture" id=16]
[ext_resource path="res://external/aseprite/logo_animation/double_swipe_with_signature_drawer_and_small_shine_015.png" type="Texture" id=17]
[ext_resource path="res://external/aseprite/logo_animation/double_swipe_with_signature_drawer_and_small_shine_016.png" type="Texture" id=18]
[ext_resource path="res://external/aseprite/logo_animation/double_swipe_with_signature_drawer_and_small_shine_017.png" type="Texture" id=19]
[ext_resource path="res://external/aseprite/logo_animation/double_swipe_with_signature_drawer_and_small_shine_018.png" type="Texture" id=20]
[ext_resource path="res://external/aseprite/logo_animation/double_swipe_with_signature_drawer_and_small_shine_019.png" type="Texture" id=21]
[ext_resource path="res://external/aseprite/logo_animation/double_swipe_with_signature_drawer_and_small_shine_020.png" type="Texture" id=22]
[ext_resource path="res://external/aseprite/logo_animation/double_swipe_with_signature_drawer_and_small_shine_021.png" type="Texture" id=23]
[ext_resource path="res://external/aseprite/logo_animation/double_swipe_with_signature_drawer_and_small_shine_022.png" type="Texture" id=24]
[ext_resource path="res://external/aseprite/logo_animation/double_swipe_with_signature_drawer_and_small_shine_023.png" type="Texture" id=25]
[ext_resource path="res://external/aseprite/logo_animation/double_swipe_with_signature_drawer_and_small_shine_024.png" type="Texture" id=26]
[ext_resource path="res://external/aseprite/logo_animation/double_swipe_with_signature_drawer_and_small_shine_025.png" type="Texture" id=27]
[ext_resource path="res://external/aseprite/logo_animation/double_swipe_with_signature_drawer_and_small_shine_026.png" type="Texture" id=28]
[ext_resource path="res://external/aseprite/logo_animation/double_swipe_with_signature_drawer_and_small_shine_027.png" type="Texture" id=29]
[ext_resource path="res://external/aseprite/logo_animation/double_swipe_with_signature_drawer_and_small_shine_028.png" type="Texture" id=30]
[ext_resource path="res://external/aseprite/logo_animation/double_swipe_with_signature_drawer_and_small_shine_029.png" type="Texture" id=31]
[ext_resource path="res://external/aseprite/logo_animation/double_swipe_with_signature_drawer_and_small_shine_030.png" type="Texture" id=32]
[ext_resource path="res://external/aseprite/logo_animation/double_swipe_with_signature_drawer_and_small_shine_031.png" type="Texture" id=33]
[ext_resource path="res://external/aseprite/logo_animation/double_swipe_with_signature_drawer_and_small_shine_032.png" type="Texture" id=34]
[ext_resource path="res://external/aseprite/logo_animation/double_swipe_with_signature_drawer_and_small_shine_033.png" type="Texture" id=35]
[ext_resource path="res://external/aseprite/logo_animation/double_swipe_with_signature_drawer_and_small_shine_034.png" type="Texture" id=36]
[ext_resource path="res://external/aseprite/logo_animation/double_swipe_with_signature_drawer_and_small_shine_035.png" type="Texture" id=37]
[ext_resource path="res://external/aseprite/logo_animation/double_swipe_with_signature_drawer_and_small_shine_036.png" type="Texture" id=38]
[ext_resource path="res://external/aseprite/logo_animation/double_swipe_with_signature_drawer_and_small_shine_037.png" type="Texture" id=39]
[ext_resource path="res://external/aseprite/logo_animation/double_swipe_with_signature_drawer_and_small_shine_038.png" type="Texture" id=40]
[ext_resource path="res://external/aseprite/logo_animation/double_swipe_with_signature_drawer_and_small_shine_039.png" type="Texture" id=41]
[ext_resource path="res://external/aseprite/logo_animation/double_swipe_with_signature_drawer_and_small_shine_040.png" type="Texture" id=42]
[ext_resource path="res://external/aseprite/logo_animation/double_swipe_with_signature_drawer_and_small_shine_041.png" type="Texture" id=43]
[ext_resource path="res://external/aseprite/logo_animation/double_swipe_with_signature_drawer_and_small_shine_042.png" type="Texture" id=44]
[ext_resource path="res://external/aseprite/logo_animation/double_swipe_with_signature_drawer_and_small_shine_043.png" type="Texture" id=45]
[ext_resource path="res://external/aseprite/logo_animation/double_swipe_with_signature_drawer_and_small_shine_044.png" type="Texture" id=46]
[ext_resource path="res://external/aseprite/logo_animation/double_swipe_with_signature_drawer_and_small_shine_045.png" type="Texture" id=47]
[ext_resource path="res://external/aseprite/logo_animation/double_swipe_with_signature_drawer_and_small_shine_046.png" type="Texture" id=48]
[ext_resource path="res://external/aseprite/logo_animation/double_swipe_with_signature_drawer_and_small_shine_047.png" type="Texture" id=49]
[ext_resource path="res://external/aseprite/logo_animation/double_swipe_with_signature_drawer_and_small_shine_048.png" type="Texture" id=50]
[ext_resource path="res://external/aseprite/logo_animation/double_swipe_with_signature_drawer_and_small_shine_049.png" type="Texture" id=51]
[ext_resource path="res://external/aseprite/logo_animation/double_swipe_with_signature_drawer_and_small_shine_050.png" type="Texture" id=52]
[ext_resource path="res://external/aseprite/logo_animation/double_swipe_with_signature_drawer_and_small_shine_051.png" type="Texture" id=53]
[ext_resource path="res://external/aseprite/logo_animation/double_swipe_with_signature_drawer_and_small_shine_052.png" type="Texture" id=54]
[ext_resource path="res://external/aseprite/logo_animation/double_swipe_with_signature_drawer_and_small_shine_053.png" type="Texture" id=55]
[ext_resource path="res://external/aseprite/logo_animation/double_swipe_with_signature_drawer_and_small_shine_054.png" type="Texture" id=56]
[ext_resource path="res://external/aseprite/logo_animation/double_swipe_with_signature_drawer_and_small_shine_055.png" type="Texture" id=57]
[ext_resource path="res://external/aseprite/logo_animation/double_swipe_with_signature_drawer_and_small_shine_056.png" type="Texture" id=58]
[ext_resource path="res://external/aseprite/logo_animation/double_swipe_with_signature_drawer_and_small_shine_057.png" type="Texture" id=59]
[ext_resource path="res://external/aseprite/logo_animation/double_swipe_with_signature_drawer_and_small_shine_058.png" type="Texture" id=60]
[ext_resource path="res://external/aseprite/logo_animation/double_swipe_with_signature_drawer_and_small_shine_059.png" type="Texture" id=61]
[ext_resource path="res://external/aseprite/logo_animation/double_swipe_with_signature_drawer_and_small_shine_060.png" type="Texture" id=62]
[ext_resource path="res://external/aseprite/logo_animation/double_swipe_with_signature_drawer_and_small_shine_061.png" type="Texture" id=63]
[ext_resource path="res://external/aseprite/logo_animation/double_swipe_with_signature_drawer_and_small_shine_062.png" type="Texture" id=64]
[ext_resource path="res://external/aseprite/logo_animation/double_swipe_with_signature_drawer_and_small_shine_063.png" type="Texture" id=65]
[ext_resource path="res://external/aseprite/logo_animation/double_swipe_with_signature_drawer_and_small_shine_064.png" type="Texture" id=66]
[ext_resource path="res://external/aseprite/logo_animation/double_swipe_with_signature_drawer_and_small_shine_065.png" type="Texture" id=67]
[ext_resource path="res://external/aseprite/logo_animation/double_swipe_with_signature_drawer_and_small_shine_066.png" type="Texture" id=68]
[ext_resource path="res://external/aseprite/logo_animation/double_swipe_with_signature_drawer_and_small_shine_067.png" type="Texture" id=69]
[ext_resource path="res://external/aseprite/logo_animation/double_swipe_with_signature_drawer_and_small_shine_068.png" type="Texture" id=70]
[ext_resource path="res://external/aseprite/logo_animation/double_swipe_with_signature_drawer_and_small_shine_069.png" type="Texture" id=71]
[ext_resource path="res://external/aseprite/logo_animation/double_swipe_with_signature_drawer_and_small_shine_070.png" type="Texture" id=72]
[ext_resource path="res://external/aseprite/logo_animation/double_swipe_with_signature_drawer_and_small_shine_071.png" type="Texture" id=73]
[ext_resource path="res://external/aseprite/logo_animation/double_swipe_with_signature_drawer_and_small_shine_072.png" type="Texture" id=74]
[ext_resource path="res://external/aseprite/logo_animation/double_swipe_with_signature_drawer_and_small_shine_073.png" type="Texture" id=75]
[ext_resource path="res://external/aseprite/logo_animation/double_swipe_with_signature_drawer_and_small_shine_074.png" type="Texture" id=76]
[ext_resource path="res://external/aseprite/logo_animation/double_swipe_with_signature_drawer_and_small_shine_075.png" type="Texture" id=77]
[ext_resource path="res://external/aseprite/logo_animation/double_swipe_with_signature_drawer_and_small_shine_076.png" type="Texture" id=78]
[ext_resource path="res://external/aseprite/logo_animation/double_swipe_with_signature_drawer_and_small_shine_077.png" type="Texture" id=79]
[ext_resource path="res://external/aseprite/logo_animation/double_swipe_with_signature_drawer_and_small_shine_078.png" type="Texture" id=80]
[ext_resource path="res://external/aseprite/logo_animation/double_swipe_with_signature_drawer_and_small_shine_079.png" type="Texture" id=81]
[ext_resource path="res://external/aseprite/logo_animation/double_swipe_with_signature_drawer_and_small_shine_080.png" type="Texture" id=82]
[ext_resource path="res://external/aseprite/logo_animation/double_swipe_with_signature_drawer_and_small_shine_081.png" type="Texture" id=83]
[ext_resource path="res://external/aseprite/logo_animation/double_swipe_with_signature_drawer_and_small_shine_082.png" type="Texture" id=84]
[ext_resource path="res://external/aseprite/logo_animation/double_swipe_with_signature_drawer_and_small_shine_083.png" type="Texture" id=85]
[ext_resource path="res://external/aseprite/logo_animation/double_swipe_with_signature_drawer_and_small_shine_084.png" type="Texture" id=86]
[ext_resource path="res://external/aseprite/logo_animation/double_swipe_with_signature_drawer_and_small_shine_085.png" type="Texture" id=87]
[ext_resource path="res://external/aseprite/logo_animation/double_swipe_with_signature_drawer_and_small_shine_086.png" type="Texture" id=88]
[ext_resource path="res://external/aseprite/logo_animation/double_swipe_with_signature_drawer_and_small_shine_087.png" type="Texture" id=89]
[ext_resource path="res://external/aseprite/logo_animation/double_swipe_with_signature_drawer_and_small_shine_088.png" type="Texture" id=90]
[ext_resource path="res://external/aseprite/logo_animation/double_swipe_with_signature_drawer_and_small_shine_089.png" type="Texture" id=91]
[ext_resource path="res://external/aseprite/logo_animation/logo_background_big_square.png" type="Texture" id=92]
[ext_resource path="res://external/sunvox/logo animation/fancy logo sfx.ogg" type="AudioStream" id=93]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 54 ), ExtResource( 55 ), ExtResource( 56 ), ExtResource( 57 ), ExtResource( 58 ), ExtResource( 59 ), ExtResource( 60 ), ExtResource( 61 ), ExtResource( 62 ), ExtResource( 63 ), ExtResource( 64 ), ExtResource( 65 ), ExtResource( 66 ), ExtResource( 67 ), ExtResource( 68 ), ExtResource( 69 ), ExtResource( 70 ), ExtResource( 71 ), ExtResource( 72 ), ExtResource( 73 ), ExtResource( 74 ), ExtResource( 75 ), ExtResource( 76 ), ExtResource( 77 ), ExtResource( 78 ), ExtResource( 79 ), ExtResource( 80 ), ExtResource( 81 ), ExtResource( 82 ), ExtResource( 83 ), ExtResource( 84 ), ExtResource( 85 ), ExtResource( 86 ), ExtResource( 87 ), ExtResource( 88 ), ExtResource( 89 ), ExtResource( 90 ), ExtResource( 91 ) ],
"loop": false,
"name": "default",
"speed": 60.0
} ]

[node name="logo_intro" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="center_container" type="CenterContainer" parent="."]
margin_right = 1024.0
margin_bottom = 576.0

[node name="control" type="Control" parent="center_container"]
margin_left = 142.0
margin_top = 224.0
margin_right = 882.0
margin_bottom = 352.0
rect_min_size = Vector2( 740, 128 )

[node name="logo_sprite" type="AnimatedSprite" parent="center_container/control"]
scale = Vector2( 4, 4 )
frames = SubResource( 1 )
centered = false

[node name="logo_background_big_square" type="Sprite" parent="."]
scale = Vector2( 5, 5 )
z_index = -1
texture = ExtResource( 92 )
centered = false

[node name="audio_stream_player" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 93 )
volume_db = -20.0

[node name="tween" type="Tween" parent="."]

